--- a/grafana-temperature/container/prometheus.yml.example
+++ b/grafana-temperature/container/prometheus.yml.example
@@ -7,4 +7,4 @@ scrape_configs:
       - targets: ["localhost:9090"]
   - job_name: "pico"
     static_configs:
-      - targets: ["192.168.1.8:8080"]
+      - targets: ["PICO_IP:8080"]
